Squashed commit of the following:
commit c5b68d6be94b298d1455ad0f91a905c91abe6725
Author: Rafael <rafael.saes@odysee.com>
Date:   Fri Jan 28 11:24:20 2022 -0300

    Fix failed logic that broke desktop player

commit 6bc31ade6f132037bb0fe5bff2ab72b18dba1b5f
Author: Rafael <rafael.saes@odysee.com>
Date:   Fri Jan 28 10:15:59 2022 -0300

    Split mobile and small popout window styles

commit 497f8a0f49718b2e5d171e5881138cbfdef39449
Author: Rafael <rafael.saes@odysee.com>
Date:   Fri Jan 28 09:56:29 2022 -0300

    Fix css stuf

commit 42295cd61371538118827b1658e7de0a022b0523
Author: Rafael <rafael.saes@odysee.com>
Date:   Thu Jan 27 17:18:08 2022 -0300

    More header + pin + superchat improvements

commit fecf69e877083f40c2c8c88d16ba741bd7abcbd4
Merge: 05810aacd 898376888
Author: Rafael <rafael.saes@odysee.com>
Date:   Thu Jan 27 15:12:22 2022 -0300

    Fix conflicts

commit 05810aacded1c5cb7f7fecd1b78e544150a37c21
Author: Rafael <rafael.saes@odysee.com>
Date:   Thu Jan 27 15:08:17 2022 -0300

    Improve CommentCreate style on mobile view

commit 898376888d957cdcf2c44ac5ed9a9bde9aadcf5b
Author: Rafael <rafael.saes@odysee.com>
Date:   Thu Jan 27 13:27:54 2022 -0300

    Fix

commit 6544f4c0b6c89e2dd03b3bd7213045ff383296bd
Author: Rafael <rafael.saes@odysee.com>
Date:   Wed Jan 26 10:01:42 2022 -0300

    Fix resolve mentioned_channels

commit 44213fbad2fb534896ad7de7c77cd20b5284d515
Author: Rafael <rafael.saes@odysee.com>
Date:   Wed Jan 26 09:27:59 2022 -0300

    Properly parse URIs for invalid terms

commit e4d5d6952495a5b6ddec32e40a4ebbb64dd46cc3
Author: Rafael <rafael.saes@odysee.com>
Date:   Wed Jan 26 08:50:43 2022 -0300

    Use uri from props instead of location

    - which was causing it to fail on popout chat for example

commit 31258c96903ace2e6a564eb357826ce343e1c4d3
Author: Rafael <rafael.saes@odysee.com>
Date:   Thu Jan 27 13:04:17 2022 -0300

    Fix superchats

commit 5ce9afaaa34d702312ea6b03c8ecfb35c06c2b2b
Author: Rafael <rafael.saes@odysee.com

--- a/ui/scss/component/_button.scss
+++ b/ui/scss/component/_button.scss
@@ -314,6 +314,10 @@
   }
 }
 
+.button--file-action--menu {
+  @extend .button--file-action;
+}
+
 .button--fire {
   color: var(--color-fire);
   position: relative;
@@ -751,4 +755,8 @@ svg + .button__label {
 
 .button--hash-id {
   @include font-mono;
+}
+
+.file-reaction__tooltip-inner {
+  margin: 0px !important;
 }
