--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -13,6 +13,15 @@
 .card--enable-overflow {
   overflow: visible;
   margin-bottom: var(--spacing-m);
+
+  @media (max-width: $breakpoint-small) {
+    overflow-y: scroll;
+    height: 100%;
+
+    .card__main-actions {
+      margin-top: 0px !important;
+    }
+  }
 }
 
 .card--disabled {
@@ -280,10 +289,40 @@
   flex-wrap: wrap;
 
   @media (max-width: $breakpoint-small) {
-    padding: var(--spacing-s);
+    padding: var(--spacing-xxs);
     padding-bottom: 0;
     margin: 0;
-    margin-bottom: var(--spacing-s);
+
+    .card__title-section {
+      padding: 0px;
+    }
+
+    h1 {
+      font-size: 1.2rem;
+      font-weight: var(--font-weight-bold);
+      line-height: 1.25;
+    }
+
+    h2 {
+      font-size: 1.2rem;
+      line-height: 1.25;
+    }
+
+    .recommended-content__toggles {
+      button {
+        height: unset;
+        padding: 2px var(--spacing-xxs);
+
+        .button__content {
+          height: unset;
+
+          span {
+            font-size: var(--font-small);
+            line-height: 1.25;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -312,7 +351,22 @@
   }
 
   @media (max-width: $breakpoint-small) {
-    padding: var(--spacing-l);
+    margin-bottom: var(--spacing-s) !important;
+    padding: 0 !important;
+
+    .file__viewdate {
+      padding-left: var(--spacing-xxs);
+
+      span {
+        font-size: var(--font-xxsmall);
+        margin: 0;
+      }
+
+      .media__subtitle--centered::before {
+        content: '•';
+        margin: 0 5px;
+      }
+    }
   }
 }
 
@@ -367,6 +421,17 @@
   padding-bottom: 0;
   margin: 0;
   margin-bottom: var(--spacing-m);
+
+  @media (max-width: $breakpoint-small) {
+    margin-bottom: 0px;
+    padding-bottom: var(--spacing-xxs);
+  }
+}
+
+@media (max-width: $breakpoint-small) {
+  .card__main-actions:nth-child(1) {
+    margin-top: var(--spacing-l);
+  }
 }
 
 .card__bottom-gutter {
@@ -389,6 +454,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media (max-width: $breakpoint-small) {
+    font-size: var(--font-small);
+
+    .button--link {
+      font-size: var(--font-xsmall);
+      margin: 0px;
+    }
+  }
 }
 
 .card__bottom-actions--comments {
