--- a/ui/scss/component/_livestream-chat.scss
+++ b/ui/scss/component/_livestream-chat.scss
@@ -24,6 +24,12 @@ $recent-msg-button__height: 2rem;
       padding: 0;
     }
   }
+
+  @media (max-width: $breakpoint-small) {
+    margin: 0 !important;
+    height: 100%;
+    margin-bottom: 0px !important;
+  }
 }
 
 .livestream__chat--popout {
@@ -37,11 +43,11 @@ $recent-msg-button__height: 2rem;
     height: 95vh !important;
   }
 
-  .livestreamSuperchats__wrapper {
+  .livestream-superchats__wrapper {
     width: 100%;
   }
 
-  .livestreamPinned__wrapper {
+  .livestream-pinned__wrapper {
     width: 100%;
   }
 }
@@ -93,7 +99,6 @@ $recent-msg-button__height: 2rem;
 .livestreamComments__wrapper {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - var(--header-height) - #{$discussion-header__height});
 
   .main--empty {
     .yrbl__wrap {
@@ -105,11 +110,20 @@ $recent-msg-button__height: 2rem;
       }
     }
   }
+
+  @media (min-width: $breakpoint-small) {
+    height: calc(100vh - var(--header-height) - #{$discussion-header__height});
+  }
+
+  @media (max-width: $breakpoint-small) {
+    height: 100%;
+    flex-direction: column;
+  }
 }
 
 .livestream__comments {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   font-size: var(--font-small);
   overflow-y: scroll;
   overflow-x: visible;
@@ -130,13 +144,31 @@ $recent-msg-button__height: 2rem;
   }
 }
 
-.livestream__commentCreate {
+.livestream__comment-create {
   padding: var(--spacing-s);
   border-top: 1px solid var(--color-border);
   margin-top: auto;
+
+  @media (max-width: $breakpoint-small) {
+    padding: var(--spacing-xxs);
+
+    span,
+    select,
+    option {
+      font-size: var(--font-xxsmall);
+    }
+
+    select {
+      padding: 0px var(--spacing-xxs) !important;
+    }
+
+    .select--slim {
+      margin: 0px;
+    }
+  }
 }
 
-.livestreamSuperchats__wrapper {
+.livestream-superchats__wrapper {
   flex-shrink: 0;
   position: relative;
   overflow-x: scroll;
@@ -151,7 +183,52 @@ $recent-msg-button__height: 2rem;
   }
 }
 
-.livestreamPinned__wrapper {
+.livestream-superchats__wrapper--mobile {
+  @extend .livestream-superchats__wrapper;
+
+  z-index: 1300;
+  width: 100%;
+  background-color: transparent;
+  padding: 0px;
+  border-bottom: none;
+  scrollbar-width: 0px;
+
+  &::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+  }
+}
+
+.livestream-comments__top-actions--mobile {
+  width: 100%;
+  position: absolute;
+  display: grid;
+  padding: var(--spacing-xxs);
+  padding-right: var(--spacing-m);
+
+  > div:not(:first-child) {
+    margin-top: var(--spacing-xxs);
+  }
+
+  .livestream__top-gradient {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+
+    &:after {
+      position: absolute;
+      bottom: 0;
+      opacity: 1;
+      content: '';
+      height: 100%;
+      left: 0;
+      right: 0;
+      width: 100%;
+    }
+  }
+}
+
+.livestream-pinned__wrapper {
   display: flex;
   flex-shrink: 0;
   position: relative;
@@ -180,6 +257,49 @@ $recent-msg-button__height: 2rem;
   }
 }
 
+.livestream-pinned__wrapper--mobile {
+  @extend .livestream-pinned__wrapper;
+
+  z-index: 1300;
+  max-width: 100%;
+  padding: 0;
+  padding-left: var(--spacing-xxs);
+  border-radius: var(--border-radius);
+  border: 1px solid var(--color-border);
+
+  .livestream__comment {
+    overflow: unset;
+
+    .livestreamComment__body {
+      margin: 0px;
+      width: 100%;
+
+      .markdown-preview {
+        p,
+        .button__label {
+          white-space: nowrap !important;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          word-break: break-all;
+        }
+
+        a {
+          pointer-events: none;
+        }
+      }
+    }
+  }
+
+  span {
+    font-size: var(--font-xxsmall) !important;
+  }
+
+  .close-button {
+    padding: 0;
+    padding-left: var(--spacing-xxs);
+  }
+}
+
 .livestreamSuperchat__amount--large {
   .credit-amount {
     display: flex;
@@ -188,7 +308,7 @@ $recent-msg-button__height: 2rem;
   }
 }
 
-.livestreamSuperchats__inner {
+.livestream-superchats {
   display: flex;
 
   .close-button {
@@ -196,7 +316,7 @@ $recent-msg-button__height: 2rem;
   }
 }
 
-.livestream__superchat {
+.livestream-superchat {
   display: flex;
   margin-right: var(--spacing-xs);
   padding: var(--spacing-xxs);
@@ -205,6 +325,17 @@ $recent-msg-button__height: 2rem;
   .channel-thumbnail {
     margin-right: var(--spacing-xs);
     @include handleChannelGif(2rem);
+
+    @media (max-width: $breakpoint-small) {
+      margin-right: var(--spacing-xxs);
+      @include handleChannelGif(1.5rem);
+
+      .channel-staked__wrapper {
+        padding: 0px;
+        left: -0.4rem;
+        bottom: -0.5rem;
+      }
+    }
   }
 
   &:first-of-type {
@@ -220,6 +351,10 @@ $recent-msg-button__height: 2rem;
   }
   &:nth-of-type(3) {
     background-color: var(--color-superchat-3);
+
+    @media (max-width: $breakpoint-small) {
+      background-color: #fff;
+    }
   }
 
   &:nth-of-type(-n + 3) {
@@ -234,6 +369,18 @@ $recent-msg-button__height: 2rem;
   }
 }
 
+.livestream-superchat--mobile {
+  @extend .livestream-superchat;
+
+  background-color: #fff;
+  padding: 5px;
+  padding-bottom: 2px;
+
+  span {
+    font-size: var(--font-xxsmall);
+  }
+}
+
 .livestreamSuperchat__info {
   display: flex;
   flex-direction: column;
@@ -242,6 +389,10 @@ $recent-msg-button__height: 2rem;
 
   .button {
     margin-top: calc(var(--spacing-xxs) / 2);
+  }
+
+  @media (max-width: $breakpoint-small) {
+    max-height: 40px;
   }
 }
 
