--- a/ui/scss/component/_livestream-comment.scss
+++ b/ui/scss/component/_livestream-comment.scss
@@ -32,6 +32,24 @@
   }
 }
 
+.livestream__comment--mobile {
+  @extend .livestream__comment;
+
+  display: flex;
+  justify-content: space-between;
+
+  .livestreamComment__menu {
+    position: relative;
+    right: 0;
+    top: 0;
+  }
+
+  span,
+  p {
+    font-size: var(--font-xxsmall) !important;
+  }
+}
+
 .livestream__comment--mentioned {
   background-color: var(--color-card-background-highlighted);
 }
@@ -42,6 +60,7 @@
 
 .livestream__comment--superchat {
   background-color: var(--color-card-background-highlighted);
+  display: unset;
 
   + .livestream__comment--superchat {
     margin-bottom: var(--spacing-xxs);
@@ -56,6 +75,10 @@
 
   .livestreamComment__info {
     margin-top: calc(var(--spacing-xxs) / 2);
+  }
+
+  .livestreamComment__menu {
+    position: absolute;
   }
 
   &::before {
