--- a/ui/scss/component/_main.scss
+++ b/ui/scss/component/_main.scss
@@ -36,6 +36,11 @@
 
 .main-wrapper__inner--filepage {
   padding: 0;
+
+  @media (max-width: $breakpoint-small) {
+    margin-top: 0px;
+    padding-top: var(--header-height-mobile);
+  }
 }
 
 .main-wrapper__inner--theater-mode {
@@ -82,11 +87,13 @@
   z-index: 0;
   margin-right: auto;
   margin-left: auto;
-  min-height: calc(100vh - var(--header-height));
+
+  @media (min-width: $breakpoint-small) {
+    min-height: calc(100vh - var(--header-height));
+  }
 
   @media (max-width: $breakpoint-small) {
     width: 100%;
-    min-height: calc(100vh - var(--header-height-mobile));
   }
 }
 
@@ -108,7 +115,7 @@
 
   .file-page__secondary-content {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     width: 100%;
     margin-top: var(--spacing-m);
@@ -119,10 +126,6 @@
     > :first-child {
       flex: 1;
       max-width: 100%;
-    }
-
-    @media (min-width: $breakpoint-medium) {
-      flex-direction: row;
     }
   }
 
@@ -165,6 +168,12 @@
       width: 100%;
       margin-left: 0;
       margin-top: var(--spacing-l);
+    }
+
+    @media (max-width: $breakpoint-small) {
+      .card__header--between {
+        padding: var(--spacing-xxs);
+      }
     }
   }
 
@@ -221,6 +230,23 @@
     padding: var(--spacing-xs);
     flex-direction: column;
     padding-top: 0;
+    margin: 0;
+    padding: 0;
+
+    .file-page__secondary-content {
+      margin: 0;
+      padding: 0;
+    }
+
+    .card {
+      border-radius: 0;
+      margin-bottom: 0px !important;
+      padding: 0;
+    }
+
+    .file-page__recommended {
+      margin-top: 0px !important;
+    }
   }
 }
 
@@ -275,13 +301,13 @@
     margin-top: var(--spacing-m);
     margin-bottom: var(--spacing-m);
 
-    @media (min-width: $breakpoint-large + 300px) {
+    @media (min-width: ($breakpoint-large + 300px)) {
       max-width: calc(var(--page-max-width--filepage) / 1.25);
       margin-left: auto;
       margin-right: auto;
     }
 
-    @media (min-width: $breakpoint-medium) and (max-width: $breakpoint-large + 300px) {
+    @media (min-width: $breakpoint-medium) and (max-width: ($breakpoint-large + 300px)) {
       max-width: calc(100vw - var(--livestream-comments-width) - var(--spacing-m) * 3);
       margin-left: var(--spacing-m);
       margin-right: var(--spacing-m);
@@ -301,7 +327,19 @@
     }
   }
 
-  @media (max-width: $breakpoint-medium) {
+  @media (max-width: $breakpoint-small) {
+    padding: 0;
+
+    .card {
+      margin: 0;
+    }
+
+    .card-stack {
+      margin: 0;
+    }
+  }
+
+  @media (min-width: $breakpoint-small) and (max-width: $breakpoint-medium) {
     padding: 0 var(--spacing-m);
   }
 }
