Add stub hover text for "FYP is experimental..."

--- a/ui/scss/component/_claim-list.scss
+++ b/ui/scss/component/_claim-list.scss
@@ -453,6 +453,10 @@
   justify-content: space-between;
 }
 
+.claim-grid__header--fyp {
+  color: var(--color-link);
+}
+
 .claim-grid__title {
   font-weight: 300;
   font-size: var(--font-large);
